// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio[Base] should render correctly  1`] = `
<div
  class="c-nntf3s soui-radio-wrapper"
>
  <input
    style="display: none;"
    tabindex="0"
    type="radio"
  />
  <span
    class="clsri3z soui-radio-indicator-wrapper"
  >
    <span
      class="c-kc4scc soui-radio-indicator"
      tabindex="1"
    />
  </span>
  <span
    class="c-j0ne9w soui-radio-desc"
  >
    Option
  </span>
</div>
`;

exports[`Radio[Base] should render correctly about block 1`] = `
<div
  class="c-l9d8jw soui-radio-group"
>
  <div
    class="c-nntf3s soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="clsri3z soui-radio-indicator-wrapper"
    >
      <span
        class="c-kc4scc soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-j0ne9w soui-radio-desc"
    >
      red
    </span>
  </div>
  <div
    class="c-nntf3s soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="clsri3z soui-radio-indicator-wrapper"
    >
      <span
        class="c-kc4scc soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-j0ne9w soui-radio-desc"
    >
      orange
    </span>
  </div>
  <div
    class="c-nntf3s soui-radio-wrapper c-i6mc3l soui-radio-wrapper-checked"
  >
    <input
      checked=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="clsri3z soui-radio-indicator-wrapper"
    >
      <span
        class="c-kc4scc soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-j0ne9w soui-radio-desc"
    >
      yellow
    </span>
  </div>
  <div
    class="c-nntf3s soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="clsri3z soui-radio-indicator-wrapper"
    >
      <span
        class="c-kc4scc soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-j0ne9w soui-radio-desc"
    >
      green
    </span>
  </div>
  <div
    class="c-nntf3s soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="clsri3z soui-radio-indicator-wrapper"
    >
      <span
        class="c-kc4scc soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-j0ne9w soui-radio-desc"
    >
      cyan
    </span>
  </div>
  <div
    class="c-nntf3s soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="clsri3z soui-radio-indicator-wrapper"
    >
      <span
        class="c-kc4scc soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-j0ne9w soui-radio-desc"
    >
      blue
    </span>
  </div>
  <div
    class="c-nntf3s soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="clsri3z soui-radio-indicator-wrapper"
    >
      <span
        class="c-kc4scc soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-j0ne9w soui-radio-desc"
    >
      violet
    </span>
  </div>
</div>
`;

exports[`Radio[Base] should render correctly about button 1`] = `
<div
  class="c-l9d8jw soui-radio-group cg688g6 soui-radio-group-button cejlunx soui-button-group"
>
  <button
    class="c-nntf3s soui-radio-wrapper c-98dy8e soui-button-secondary cmdnit0 soui-button-button"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Monday
    </span>
  </button>
  <button
    class="c-nntf3s soui-radio-wrapper c-98dy8e soui-button-secondary cmdnit0 soui-button-button"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Tuesday
    </span>
  </button>
  <button
    class="c-nntf3s soui-radio-wrapper c-i6mc3l soui-radio-wrapper-checked c-pqywe8 soui-button-primary cmdnit0 soui-button-button"
    type="button"
  >
    <input
      checked=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Wednesday
    </span>
  </button>
  <button
    class="c-nntf3s soui-radio-wrapper c-98dy8e soui-button-secondary cmdnit0 soui-button-button"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Thursday
    </span>
  </button>
  <button
    class="c-nntf3s soui-radio-wrapper c-98dy8e soui-button-secondary cmdnit0 soui-button-button"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Friday
    </span>
  </button>
  <button
    class="c-nntf3s soui-radio-wrapper c-98dy8e soui-button-secondary cmdnit0 soui-button-button"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Saturday
    </span>
  </button>
  <button
    class="c-nntf3s soui-radio-wrapper c-98dy8e soui-button-secondary cmdnit0 soui-button-button"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Sunday
    </span>
  </button>
</div>
`;

exports[`Radio[Base] should render correctly about button outline 1`] = `
<div
  class="c-l9d8jw soui-radio-group cg688g6 soui-radio-group-button cejlunx soui-button-group"
>
  <button
    class="c-nntf3s soui-radio-wrapper c-98dy8e soui-button-secondary cmdnit0 soui-button-button cw6wzwg soui-button-outline"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Monday
    </span>
  </button>
  <button
    class="c-nntf3s soui-radio-wrapper c-98dy8e soui-button-secondary cmdnit0 soui-button-button cw6wzwg soui-button-outline"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Tuesday
    </span>
  </button>
  <button
    class="c-nntf3s soui-radio-wrapper c-i6mc3l soui-radio-wrapper-checked c-pqywe8 soui-button-primary cmdnit0 soui-button-button cw6wzwg soui-button-outline"
    type="button"
  >
    <input
      checked=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Wednesday
    </span>
  </button>
  <button
    class="c-nntf3s soui-radio-wrapper c-98dy8e soui-button-secondary cmdnit0 soui-button-button cw6wzwg soui-button-outline"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Thursday
    </span>
  </button>
  <button
    class="c-nntf3s soui-radio-wrapper c-98dy8e soui-button-secondary cmdnit0 soui-button-button cw6wzwg soui-button-outline"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Friday
    </span>
  </button>
  <button
    class="c-nntf3s soui-radio-wrapper c-98dy8e soui-button-secondary cmdnit0 soui-button-button cw6wzwg soui-button-outline"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Saturday
    </span>
  </button>
  <button
    class="c-nntf3s soui-radio-wrapper c-98dy8e soui-button-secondary cmdnit0 soui-button-button cw6wzwg soui-button-outline"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span>
      Sunday
    </span>
  </button>
</div>
`;

exports[`Radio[Base] should render correctly about cancel 1`] = `
<div
  class="c-l9d8jw soui-radio-group"
>
  <div
    class="c-nntf3s soui-radio-wrapper c-i6mc3l soui-radio-wrapper-checked"
  >
    <input
      checked=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="clsri3z soui-radio-indicator-wrapper"
    >
      <span
        class="c-kc4scc soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-j0ne9w soui-radio-desc"
    >
      red
    </span>
  </div>
  <div
    class="c-nntf3s soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="clsri3z soui-radio-indicator-wrapper"
    >
      <span
        class="c-kc4scc soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-j0ne9w soui-radio-desc"
    >
      orange
    </span>
  </div>
  <div
    class="c-nntf3s soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="clsri3z soui-radio-indicator-wrapper"
    >
      <span
        class="c-kc4scc soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-j0ne9w soui-radio-desc"
    >
      yellow
    </span>
  </div>
  <div
    class="c-nntf3s soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="clsri3z soui-radio-indicator-wrapper"
    >
      <span
        class="c-kc4scc soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-j0ne9w soui-radio-desc"
    >
      green
    </span>
  </div>
  <div
    class="c-nntf3s soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="clsri3z soui-radio-indicator-wrapper"
    >
      <span
        class="c-kc4scc soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-j0ne9w soui-radio-desc"
    >
      cyan
    </span>
  </div>
  <div
    class="c-nntf3s soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="clsri3z soui-radio-indicator-wrapper"
    >
      <span
        class="c-kc4scc soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-j0ne9w soui-radio-desc"
    >
      blue
    </span>
  </div>
  <div
    class="c-nntf3s soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="clsri3z soui-radio-indicator-wrapper"
    >
      <span
        class="c-kc4scc soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-j0ne9w soui-radio-desc"
    >
      violet
    </span>
  </div>
</div>
`;

exports[`Radio[Base] should render correctly about disabled 1`] = `
<div
  class="c-l9d8jw soui-radio-group"
>
  <div
    class="c-nntf3s soui-radio-wrapper c-ge1r8c soui-radio-wrapper-disabled"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="clsri3z soui-radio-indicator-wrapper"
    >
      <span
        class="c-kc4scc soui-radio-indicator"
        tabindex="-1"
      />
    </span>
    <span
      class="c-j0ne9w soui-radio-desc"
    >
      red
    </span>
  </div>
  <div
    class="c-nntf3s soui-radio-wrapper c-ge1r8c soui-radio-wrapper-disabled"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="clsri3z soui-radio-indicator-wrapper"
    >
      <span
        class="c-kc4scc soui-radio-indicator"
        tabindex="-1"
      />
    </span>
    <span
      class="c-j0ne9w soui-radio-desc"
    >
      orange
    </span>
  </div>
  <div
    class="c-nntf3s soui-radio-wrapper c-ge1r8c soui-radio-wrapper-disabled"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="clsri3z soui-radio-indicator-wrapper"
    >
      <span
        class="c-kc4scc soui-radio-indicator"
        tabindex="-1"
      />
    </span>
    <span
      class="c-j0ne9w soui-radio-desc"
    >
      yellow
    </span>
  </div>
  <div
    class="c-nntf3s soui-radio-wrapper c-ge1r8c soui-radio-wrapper-disabled"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="clsri3z soui-radio-indicator-wrapper"
    >
      <span
        class="c-kc4scc soui-radio-indicator"
        tabindex="-1"
      />
    </span>
    <span
      class="c-j0ne9w soui-radio-desc"
    >
      green
    </span>
  </div>
  <div
    class="c-nntf3s soui-radio-wrapper c-ge1r8c soui-radio-wrapper-disabled"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="clsri3z soui-radio-indicator-wrapper"
    >
      <span
        class="c-kc4scc soui-radio-indicator"
        tabindex="-1"
      />
    </span>
    <span
      class="c-j0ne9w soui-radio-desc"
    >
      cyan
    </span>
  </div>
  <div
    class="c-nntf3s soui-radio-wrapper c-ge1r8c soui-radio-wrapper-disabled c-i6mc3l soui-radio-wrapper-checked"
  >
    <input
      checked=""
      disabled=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="clsri3z soui-radio-indicator-wrapper"
    >
      <span
        class="c-kc4scc soui-radio-indicator"
        tabindex="-1"
      />
    </span>
    <span
      class="c-j0ne9w soui-radio-desc"
    >
      blue
    </span>
  </div>
  <div
    class="c-nntf3s soui-radio-wrapper c-ge1r8c soui-radio-wrapper-disabled"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="clsri3z soui-radio-indicator-wrapper"
    >
      <span
        class="c-kc4scc soui-radio-indicator"
        tabindex="-1"
      />
    </span>
    <span
      class="c-j0ne9w soui-radio-desc"
    >
      violet
    </span>
  </div>
</div>
`;

exports[`Radio[Base] should render correctly about disabled func 1`] = `
<div
  class="c-l9d8jw soui-radio-group"
>
  <div
    class="c-nntf3s soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="clsri3z soui-radio-indicator-wrapper"
    >
      <span
        class="c-kc4scc soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-j0ne9w soui-radio-desc"
    >
      red
    </span>
  </div>
  <div
    class="c-nntf3s soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="clsri3z soui-radio-indicator-wrapper"
    >
      <span
        class="c-kc4scc soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-j0ne9w soui-radio-desc"
    >
      orange
    </span>
  </div>
  <div
    class="c-nntf3s soui-radio-wrapper c-ge1r8c soui-radio-wrapper-disabled"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="clsri3z soui-radio-indicator-wrapper"
    >
      <span
        class="c-kc4scc soui-radio-indicator"
        tabindex="-1"
      />
    </span>
    <span
      class="c-j0ne9w soui-radio-desc"
    >
      yellow
    </span>
  </div>
  <div
    class="c-nntf3s soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="clsri3z soui-radio-indicator-wrapper"
    >
      <span
        class="c-kc4scc soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-j0ne9w soui-radio-desc"
    >
      green
    </span>
  </div>
  <div
    class="c-nntf3s soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="clsri3z soui-radio-indicator-wrapper"
    >
      <span
        class="c-kc4scc soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-j0ne9w soui-radio-desc"
    >
      cyan
    </span>
  </div>
  <div
    class="c-nntf3s soui-radio-wrapper c-i6mc3l soui-radio-wrapper-checked"
  >
    <input
      checked=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="clsri3z soui-radio-indicator-wrapper"
    >
      <span
        class="c-kc4scc soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-j0ne9w soui-radio-desc"
    >
      blue
    </span>
  </div>
  <div
    class="c-nntf3s soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="clsri3z soui-radio-indicator-wrapper"
    >
      <span
        class="c-kc4scc soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-j0ne9w soui-radio-desc"
    >
      violet
    </span>
  </div>
</div>
`;

exports[`Radio[Base] should render correctly about group 1`] = `
<div
  class="c-l9d8jw soui-radio-group"
>
  <div
    class="c-nntf3s soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="clsri3z soui-radio-indicator-wrapper"
    >
      <span
        class="c-kc4scc soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-j0ne9w soui-radio-desc"
    >
      red
    </span>
  </div>
  <div
    class="c-nntf3s soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="clsri3z soui-radio-indicator-wrapper"
    >
      <span
        class="c-kc4scc soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-j0ne9w soui-radio-desc"
    >
      orange
    </span>
  </div>
  <div
    class="c-nntf3s soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="clsri3z soui-radio-indicator-wrapper"
    >
      <span
        class="c-kc4scc soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-j0ne9w soui-radio-desc"
    >
      yellow
    </span>
  </div>
  <div
    class="c-nntf3s soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="clsri3z soui-radio-indicator-wrapper"
    >
      <span
        class="c-kc4scc soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-j0ne9w soui-radio-desc"
    >
      green
    </span>
  </div>
  <div
    class="c-nntf3s soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="clsri3z soui-radio-indicator-wrapper"
    >
      <span
        class="c-kc4scc soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-j0ne9w soui-radio-desc"
    >
      cyan
    </span>
  </div>
  <div
    class="c-nntf3s soui-radio-wrapper c-i6mc3l soui-radio-wrapper-checked"
  >
    <input
      checked=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="clsri3z soui-radio-indicator-wrapper"
    >
      <span
        class="c-kc4scc soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-j0ne9w soui-radio-desc"
    >
      blue
    </span>
  </div>
  <div
    class="c-nntf3s soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="clsri3z soui-radio-indicator-wrapper"
    >
      <span
        class="c-kc4scc soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-j0ne9w soui-radio-desc"
    >
      violet
    </span>
  </div>
</div>
`;

exports[`Radio[Base] should render correctly about group children 1`] = `
<div
  class="c-l9d8jw soui-radio-group"
>
  <div
    class="c-nntf3s soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="clsri3z soui-radio-indicator-wrapper"
    >
      <span
        class="c-kc4scc soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-j0ne9w soui-radio-desc"
    >
      red
    </span>
  </div>
  <div
    class="c-nntf3s soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="clsri3z soui-radio-indicator-wrapper"
    >
      <span
        class="c-kc4scc soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-j0ne9w soui-radio-desc"
    >
      orange
    </span>
  </div>
  <div
    class="c-nntf3s soui-radio-wrapper c-i6mc3l soui-radio-wrapper-checked"
  >
    <input
      checked=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="clsri3z soui-radio-indicator-wrapper"
    >
      <span
        class="c-kc4scc soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-j0ne9w soui-radio-desc"
    >
      yellow
    </span>
  </div>
  <div
    class="c-nntf3s soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="clsri3z soui-radio-indicator-wrapper"
    >
      <span
        class="c-kc4scc soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-j0ne9w soui-radio-desc"
    >
      green
    </span>
  </div>
  <div
    class="c-nntf3s soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="clsri3z soui-radio-indicator-wrapper"
    >
      <span
        class="c-kc4scc soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-j0ne9w soui-radio-desc"
    >
      cyan
    </span>
  </div>
  <div
    class="c-nntf3s soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="clsri3z soui-radio-indicator-wrapper"
    >
      <span
        class="c-kc4scc soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-j0ne9w soui-radio-desc"
    >
      blue
    </span>
  </div>
  <div
    class="c-nntf3s soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="clsri3z soui-radio-indicator-wrapper"
    >
      <span
        class="c-kc4scc soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-j0ne9w soui-radio-desc"
    >
      violet
    </span>
  </div>
</div>
`;

exports[`Radio[Base] should render correctly about size 1`] = `
<div>
  <div
    class="c-l9d8jw soui-radio-group cg688g6 soui-radio-group-button cejlunx soui-button-group"
  >
    <button
      class="c-nntf3s soui-radio-wrapper c-i6mc3l soui-radio-wrapper-checked c-pqywe8 soui-button-primary cmdnit0 soui-button-button ceq3w91 soui-button-small"
      type="button"
    >
      <input
        checked=""
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span>
        red
      </span>
    </button>
    <button
      class="c-nntf3s soui-radio-wrapper c-98dy8e soui-button-secondary cmdnit0 soui-button-button ceq3w91 soui-button-small"
      type="button"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span>
        orange
      </span>
    </button>
    <button
      class="c-nntf3s soui-radio-wrapper c-98dy8e soui-button-secondary cmdnit0 soui-button-button ceq3w91 soui-button-small"
      type="button"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span>
        yellow
      </span>
    </button>
  </div>
  <br />
  <div
    class="c-l9d8jw soui-radio-group cg688g6 soui-radio-group-button cejlunx soui-button-group"
    style="margin-top: 24px;"
  >
    <button
      class="c-nntf3s soui-radio-wrapper c-i6mc3l soui-radio-wrapper-checked c-pqywe8 soui-button-primary cmdnit0 soui-button-button"
      type="button"
    >
      <input
        checked=""
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span>
        red
      </span>
    </button>
    <button
      class="c-nntf3s soui-radio-wrapper c-98dy8e soui-button-secondary cmdnit0 soui-button-button"
      type="button"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span>
        orange
      </span>
    </button>
    <button
      class="c-nntf3s soui-radio-wrapper c-98dy8e soui-button-secondary cmdnit0 soui-button-button"
      type="button"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span>
        yellow
      </span>
    </button>
  </div>
  <br />
  <div
    class="c-l9d8jw soui-radio-group cg688g6 soui-radio-group-button cejlunx soui-button-group"
    style="margin-top: 24px;"
  >
    <button
      class="c-nntf3s soui-radio-wrapper c-i6mc3l soui-radio-wrapper-checked c-pqywe8 soui-button-primary cmdnit0 soui-button-button cem20qh soui-button-large"
      type="button"
    >
      <input
        checked=""
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span>
        red
      </span>
    </button>
    <button
      class="c-nntf3s soui-radio-wrapper c-98dy8e soui-button-secondary cmdnit0 soui-button-button cem20qh soui-button-large"
      type="button"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span>
        orange
      </span>
    </button>
    <button
      class="c-nntf3s soui-radio-wrapper c-98dy8e soui-button-secondary cmdnit0 soui-button-button cem20qh soui-button-large"
      type="button"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span>
        yellow
      </span>
    </button>
  </div>
  <br />
</div>
`;

exports[`Radio[Base] should render correctly about status 1`] = `
<div
  class="c-nntf3s soui-radio-wrapper"
>
  <input
    style="display: none;"
    tabindex="0"
    type="radio"
  />
  <span
    class="clsri3z soui-radio-indicator-wrapper"
  >
    <span
      class="c-kc4scc soui-radio-indicator"
      tabindex="1"
    />
  </span>
  <span
    class="c-j0ne9w soui-radio-desc"
  >
    OptionA
  </span>
</div>
`;
